--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10",
     "vue-cookies": "^1.5.13",
     "vue-router": "^3.1.3",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
