--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,17 @@
 {
-	"hosting": {
-		"site": "rmp-training-center",
-		"public": "dist",
-		"ignore": [ "firebase.json", "**/.*", "**/node_modules/**" ],
-		"rewrites": [
-			{
-				"source": "**",
-				"destination": "/index.html"
-			}
-		]
-	}
+  "hosting": {
+	"site": "rmp-admin",
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
